--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/qmshoes?createDatabaseIfNotExist=true
-    username: ASUSVivoBook
-    password:
+    url: ${DATASOURCE_URL}
+    username: ${DATASOURCE_USERNAME}
+    password: ${DATASOURCE_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
@@ -12,5 +12,25 @@ spring:
       hibernate:
         format_sql: true
         dialect: org.hibernate.dialect.MySQLDialect
+  mail:
+    username: ${EMAIL_USERNAME}
+    password: ${EMAIL_PASSWORD}
+    host: ${EMAIL_SERVER_HOST}
+    port: ${EMAIL_SERVER_PORT}
 server:
   port: 80
+
+cloudinary:
+  url: ${CLOUDINARY_URL}
+
+vnp:
+  tmn-code: ${VNP_TMN_CODE}
+  hash-secret: ${VNP_HASH_SECRET}
+  front-end-return-url: ${VNP_FRONTEND_RETURN_URL}
+  pay-url: ${VNP_PAY_URL}
+
+jwt:
+  secret: ${JWT_SECRET}
+
+qm:
+  reset-password-url: ${QM_RESET_PASSWORD_URL}
