feat: build data for dasboard part 1

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+!**/src/main/resources/data.json
 
 ### STS ###
 .apt_generated
@@ -34,5 +35,3 @@ build/
 
 ## Env ##
 .env
-
-./src/main/resources/data.json
