--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-!**/src/main/resources/data.json
 
 ### STS ###
 .apt_generated
@@ -35,3 +34,5 @@ build/
 
 ## Env ##
 .env
+
+qmshop-firebase.json
