--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,11 @@
 			<version>3.3.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/com.google.firebase/firebase-admin -->
 <!--		<dependency>-->
 <!--			<groupId>com.google.firebase</groupId>-->
